--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,5 +7,5 @@ jobs:
       - name: Fetch API Data 📦
         uses: JamesIves/fetch-api-data-action@v2
         with:
-          endpoint: https://youtube.googleapis.com/youtube/v3/playlistItemspart=snippet&maxResults=10&playlistId=UU_zkRpcTX_4aHjEeYK_tg7A&key=${{ secrets.API_KEY }}
+          endpoint: https://youtube.googleapis.com/youtube/v3/playlistItems?part=snippet&maxResults=10&playlistId=UU_zkRpcTX_4aHjEeYK_tg7A&key=${{ secrets.API_KEY }}
           configuration: '{ "method": "GET" }'
