--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,20 @@ jobs:
   refresh-feed:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2
+        with:
+          persist-credentials: false
+
       - name: Fetch API Data 📦
         uses: JamesIves/fetch-api-data-action@v2
         with:
           endpoint: https://youtube.googleapis.com/youtube/v3/playlistItems?part=snippet&maxResults=10&playlistId=UU_zkRpcTX_4aHjEeYK_tg7A&key=${{ secrets.API_KEY }}
           configuration: '{ "method": "GET" }'
+
+      - name: Build and Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          branch: xander2005-patch-1
+          folder: fetch-api-data-action
+          target-folder: data
