--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,14 @@
 name: Refresh Feed
-on:
-  schedule:
-    - cron: '0 0-12,22-23 * * 1-5'
-    - cron: '0 4-23,0-4 * * 0,6'
+on: [push]
+  #schedule:
+    #- cron: '0 0-12,22-23 * * 1-5'
+    #- cron: '0 4-23,0-4 * * 0,6'
 jobs:
   refresh-feed:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
         with:
           persist-credentials: false
 
