--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,5 @@
 name: Refresh Feed
-on:
-  workflow_dispatch:
-  schedule:
-    - cron: '0 0-12,22-23 * * 1-5'
-    - cron: '0 4-23,0-4 * * 0,6'
+on: workflow_dispatch
 jobs:
   refresh-feed:
     permissions:
