--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           configuration: '{ "method": "GET" }'
 
       - name: Build and Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4-flow
+        uses: JamesIves/github-pages-deploy-action@releases/v4-flow
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: main
