--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,10 @@
 name: Refresh Feed
-on: workflow_dispatch
+on:
+  schedule:
+    - cron: '0 0-12,22-23 * * 1-5'
+    - cron: '0 4-23,0-4 * * 0,6'
 jobs:
   refresh-feed:
-    permissions:
-      contents: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
@@ -18,9 +19,8 @@ jobs:
           configuration: '{ "method": "GET" }'
 
       - name: Build and Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@releases/v4-flow
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
           branch: main
           folder: fetch-api-data-action
           target-folder: data
