--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ on:
   schedule:
     - cron: '0 0-12,22-23 * * 1-5'
     - cron: '0 4-23,0-4 * * 0,6'
+  workflow_dispatch:
 jobs:
   refresh-feed:
     runs-on: ubuntu-latest
